# rype

./: CMakeLists.txt  README.md  dox.config  mock_arduino.py  requirements-vision.txt  run_demo.sh
docs/html/: doxygen_crawl.html  index.html  md__r_e_a_d_m_e.html  namespacemembers.html  namespacemembers_func.html  namespacemock__arduino.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  pages.html
docs/html/search/: all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_e.js  functions_0.js  functions_1.js  namespaces_0.js  pages_0.js  pages_10.js  pages_11.js  pages_12.js  pages_13.js  pages_14.js  pages_6.js  pages_9.js  pages_a.js  pages_b.js  pages_c.js  pages_d.js  pages_f.js  searchdata.js
include/: calibration.hpp  config.hpp  console_ui.hpp  decision.hpp  discord_notify.hpp  feature_flags.hpp  filter.hpp  led_alert.hpp  persistence.hpp  sensor_reader.hpp  terminal_ui.hpp  weather.hpp
src/: calibration.cpp  console_ui.cpp  decision.cpp  discord_notify.cpp  filter.cpp  led_alert.cpp  main.cpp  persistence.cpp  sensor_reader.cpp  status_web.cpp  status_web.hpp  terminal_ui.cpp  weather.cpp
vision/: plant_matcher.py
